--- a/menu.html
+++ b/menu.html
@@ -15,7 +15,7 @@
             margin: 0;
         }
         header {
-            background-color: #f44336; /* Warna merah strawberry */
+            background-color: #f44336;
             color: white;
             text-align: center;
             padding: 20px;
@@ -52,7 +52,7 @@
         .produk-info h1 {
             font-size: 32px;
             margin-bottom: 20px;
-            color: #f44336; /* Menambahkan warna merah strawberry pada judul */
+            color: #f44336;
         }
         .produk-info button {
             padding: 15px 30px;
@@ -65,7 +65,7 @@
             transition: background-color 0.3s ease;
         }
         .produk-info button:hover {
-            background-color: #e53935; /* Warna merah yang sedikit lebih gelap untuk hover */
+            background-color: #e53935; 
         }
         .gambar-produk img {
             max-width: 100%;
@@ -112,7 +112,7 @@
         .alamat-detail h3, .map h3 {
             font-size: 24px;
             margin-bottom: 10px;
-            color: #f44336; /* Menambahkan warna merah pada judul alamat */
+            color: #f44336;
         }
         footer {
             text-align: center;
@@ -133,26 +133,6 @@
         footer .sosialmedia img:hover {
             transform: scale(1.1);
         }
-        @media (max-width: 768px) {
-            .produk {
-                flex-direction: column;
-                align-items: center;
-            }
-            .produk-info {
-                padding-right: 0;
-                text-align: center;
-                margin-bottom: 20px;
-            }
-            .gambar-produk img {
-                max-width: 90%;
-            }
-            .alamat {
-                flex-direction: column;
-            }
-            .alamat-detail, .map {
-                margin-bottom: 20px;
-            }
-        }
     </style>
 </head>
 <body>
@@ -168,7 +148,7 @@
                 <a href="https://wa.me/6281287399663"><button>PESAN</button></a>
             </div>
             <div class="gambar-produk">
-                <img src="gambarsandwich.png" alt="Sandwich Buah">
+                <img src="https://i.imgur.com/AlcgsEq.png" alt="Sandwich Buah">
             </div>
         </section>
         <section class="about">
